--- a/operations-ui/package.json
+++ b/operations-ui/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
-    "react-data-grid": "4.0.8",
+    "react-data-grid": "^4.0.8",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4"
   },
@@ -23,5 +24,15 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.6.1",
+    "eslint-config-fbjs": "^2.1.0",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-relay": "0.0.28"
+  }
 }
