--- a/operations-ui/package.json
+++ b/operations-ui/package.json
@@ -9,11 +9,13 @@
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-data-grid": "^4.0.8",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
     "react-stepzilla": "^4.7.2",
+    "react-tooltip": "^3.9.0",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
