--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "operations-ui",
+  "name": "react-operations-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -78,8 +78,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "node-sass": "^4.9.4",
-    "sass-loader": "^7.1.0"
+    "node-sass": "^4.9.4"
   },
   "jest": {
     "collectCoverageFrom": [
