--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3.2'
 services:
   operations-ui:
+    env_file: .env
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 127.0.0.1:3000:3000
+      - $REACT_APP_PORT:$REACT_APP_PORT
+
