--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,9 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - $REACT_APP_PORT:$REACT_APP_PORT
-
+      - $REACT_APP_PORT:3000
+    environment:
+      REACT_APP_OPERATIONS_API_URL: 'http://localhost:8001'
+      REACT_APP_KEYCLOAK_AUTH_URL: 'http://localhost:8080/auth'
+      REACT_APP_KEYCLOAK_REALM: 'demo'
+      REACT_APP_KEYCLOAK_CLIENT_ID: 'reactapp'
